[package]
name = "mls-platform-api"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
gecko = ["mls-rs-crypto-nss/gecko"]

[dependencies]
mls-rs = { version = "0.45", default-features = false, features = ["sqlcipher-bundled", "serde"] }
mls-rs-crypto-nss = { path = "../mls-rs-crypto-nss" }
mls-rs-provider-sqlite = { path = "../mls-rs-provider-sqlite" }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["alloc", "derive", "rc"] }
bincode = "1.3"
sha2 = "0.10"
thiserror = "1.0"
serde_json = "1.0"
