[package]
name = "mls-rs-crypto-nss"
version = "0.2.0"
edition = "2021"
description = "NSS based CryptoProvider for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs"]
license = "Apache-2.0 OR MIT"

[features]
default = ["std"]
gecko = ["nss-rs/gecko"]

std = [
    "mls-rs-core/std",
    "mls-rs-crypto-hpke/std",
    "mls-rs-crypto-traits/std",
    "getrandom/std",
    "rand_core/std",
    "dep:thiserror"
]

[dependencies]
mls-rs-core = { version = "0.21", default-features = false }
mls-rs-crypto-hpke = { version = "0.14", default-features = false }
mls-rs-crypto-traits = { version = "0.15", default-features = false }
nss-rs = { path = "/opt/mozilla/nss-rs", default-features = false }

thiserror = { version = "1.0", optional = true }
zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }

getrandom = { version = "0.2", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }

maybe-async = "0.2"

serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
assert_matches = "1.5.0"
mls-rs-core = { version = "0.21", features = ["test_suite"] }
mls-rs-crypto-hpke = { version = "0.14", default-features = false, features = ["test_utils"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
